# kursovaya_4

./: README.md  main.py  pyproject.toml
src/: classes.py  presentation.py  sort.py
tests/: test_classes.py  test_presentation.py  test_sort.py
