[tool.poetry]
name = "kursovaya4"
version = "0.1.0"
description = ""
authors = ["Emmanuil Galihanov <emikgal2507@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
